--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/dami-laare/shopIT/issues"
   },
-  "homepage": "https://github.com/dami-laare/shopIT#readme"
+  "homepage": "https://github.com/dami-laare/shopIT#readme",
+  "dependencies": {
+    "dotenv": "^14.3.2",
+    "express": "^4.17.2",
+    "mongoose": "^6.1.8"
+  }
 }
