Finished witth backend authentication and authorizations

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,3 +1,16 @@
 PORT=4000
 NODE_ENV=DEVELOPMENT
 DB_LOCAL_URI=mongodb://localhost:27017/shopit
+
+JWT_SECRET=GR8324GHR30NF3IU4R093F54NF38F0Y34N
+JWT_EXPIRES_TIME=7d
+
+COOKIE_EXPIRES_TIME=7
+
+
+SMTP_HOST=smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_USER=0b2e08c7e4983a
+SMTP_PWD=b5a00e4c73c0ea
+SMTP_FROM_NAME=ShopIT
+SMTP_FROM_EMAIL=noreply@shopit.com
